// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene Selection screen test that PictureTaker renders correctly 1`] = `
<div
  className="flexColumn"
>
  <WebcamOutput
    height={500}
    width={500}
  />
  <div
    className="button"
    onClick={[Function]}
  >
     Grab Frame 
  </div>
</div>
`;

exports[`Scene Selection screen test that scene selection container renders correctly 1`] = `
<div
  className="flexColumn"
>
  <div
    className="button"
    onClick={[Function]}
  >
    Upload scene image
  </div>
  <div
    className="button"
    onClick={[Function]}
  >
    Take a picture
  </div>
  <div
    className="button"
    onClick={[Function]}
  >
    Take a video
  </div>
</div>
`;

exports[`Scene Selection screen test that scene selection renders correctly 1`] = `
<div
  className="flexColumn"
>
  <h3>
    Select scene imagery source
  </h3>
  <div
    className="flexColumn"
  >
    <div
      className="button"
      onClick={[Function]}
    >
      Upload scene image
    </div>
    <div
      className="button"
      onClick={[Function]}
    >
      Take a picture
    </div>
    <div
      className="button"
      onClick={[Function]}
    >
      Take a video
    </div>
  </div>
  <div
    className="button"
    onClick={[Function]}
  >
    Image choice
  </div>
</div>
`;
